Beta AcousticMobilePush build: 3.9.88
Beta AcousticMobilePush Change Notes:
Bug Fixes

- None

Improvements

- 'cordova-acoustic-mobile-push-plugin-dial' has moved over to base.
- Deploy to npm at https://www.npmjs.com/package/cordova-acoustic-mobile-push-sdk.
- 'cordova-acoustic-mobile-push-plugin-fcm' has moved over to base.

Our environment for this release:

- Android Studio Iguana | 2023.2.1 Patch 1
- Xcode version: 15.3
- MacOS 14.4.1
- iOS 17.x
- Android target API level 21 to 34
- Cordova version: 12
- Cordova Android plugin version: 12.0.1
- Cordova iOS plugin version: 7.1.0
- Gradle version: 7.6
- Node 18

Known Issues

- None.

--- a/plugins/cordova-acoustic-mobile-push-plugin-beacon/src/android/build-extras.gradle
+++ b/plugins/cordova-acoustic-mobile-push-plugin-beacon/src/android/build-extras.gradle
@@ -1,14 +1,14 @@
-repositories{    
-  jcenter()
-}
+// repositories{    
+//   jcenter()
+// }
 
-dependencies {
-   implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
-}
+// dependencies {
+//    implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
+// }
 
-android {
-  packagingOptions {
-    exclude 'META-INF/NOTICE'
-    exclude 'META-INF/LICENSE'
-  }
-}
+// android {
+//   packagingOptions {
+//     exclude 'META-INF/NOTICE'
+//     exclude 'META-INF/LICENSE'
+//   }
+// }
