--- a/plugins/cordova-acoustic-mobile-push-plugin-geofence/src/android/build-extras.gradle
+++ b/plugins/cordova-acoustic-mobile-push-plugin-geofence/src/android/build-extras.gradle
@@ -1,8 +1,8 @@
-repositories{    
-  jcenter()
-}
+// repositories{    
+//   jcenter()
+// }
 
-dependencies {
-   implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
-}
+// dependencies {
+//    implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
+// }
 
