--- a/plugins/cordova-acoustic-mobile-push-plugin-calendar/src/android/build-extras.gradle
+++ b/plugins/cordova-acoustic-mobile-push-plugin-calendar/src/android/build-extras.gradle
@@ -13,7 +13,7 @@ repositories{
 }
 
 dependencies {
-  implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
+//  implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
   implementation "io.github.go-acoustic:acoustic-mobile-push-android-calendar:" + project.ext.mobilePushVersion
 }
 
