--- a/plugins/cordova-acoustic-mobile-push-plugin-location/src/android/build-extras.gradle
+++ b/plugins/cordova-acoustic-mobile-push-plugin-location/src/android/build-extras.gradle
@@ -1,8 +1,8 @@
-repositories{    
-  jcenter()
-}
+// repositories{    
+//   jcenter()
+// }
 
-dependencies {
-   implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
-   implementation "com.google.android.gms:play-services-location:" + project.ext.playServicesLocationVersion
-}
+// dependencies {
+//    implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
+//    implementation "com.google.android.gms:play-services-location:" + project.ext.playServicesLocationVersion
+// }
