Beta AcousticMobilePush build: 3.9.93
Beta AcousticMobilePush Change Notes:
Bug Fixes

- None

Improvements

- 'cordova-acoustic-mobile-push-plugin-dial' has moved over to base.
- Deploy to npm at https://www.npmjs.com/package/cordova-acoustic-mobile-push-sdk.
- 'cordova-acoustic-mobile-push-plugin-fcm' has moved over to base.

Our environment for this release:

- Android Studio Iguana | 2023.2.1 Patch 1
- Xcode version: 15.3
- MacOS 14.4.1
- iOS 17.x
- Android target API level 21 to 34
- Cordova version: 12
- Cordova Android plugin version: 12.0.1
- Cordova iOS plugin version: 7.1.0
- Gradle version: 7.6
- Node 18

Known Issues

- None.

--- a/plugins/cordova-acoustic-mobile-push/CampaignConfig.json
+++ b/plugins/cordova-acoustic-mobile-push/CampaignConfig.json
@@ -4,7 +4,12 @@
   "iOS Version": "<x.xx.xxx>, native iOS SDK version, empty value will retrieve lastest version",
   "iOSVersion": "",
   "Android Version": "<x.xx.xxx>, native Android SDK version, empty value will retrieve lastest version",
-  "androidVersion": "",
+  "Android library versions used": "<x.xx.xxx>",
+  "androidxLibVersion":"1.6.0",
+  "playServicesBaseVersion":"18.3.0",
+  "playServicesLocationVersion":"21.0.1",
+  "firebaseCoreVersion":"19.0.2",
+  "firebaseMessagingVersion":"22.0.0",
 
   "plugins": {
     "Please note": "<true/false>, for cordova build.  True for release build, false for beta build",
