--- a/applications/samples/Sample/CampaignConfig.json
+++ b/applications/samples/Sample/CampaignConfig.json
@@ -5,6 +5,16 @@
   "iOSVersion": "",
   "Android Version": "<x.xx.xxx>, native Android SDK version, empty value will retrieve lastest version",
   "androidVersion": "",
+  "Add Google Services to Android": "<true/false>",
+  "addGoogleServicesToAndroid": true,
+  "com.google.gms:google-services version used": "<x.xx.xxx>",
+  "comGoogleGmsGoogleServices": "4.4.0",
+  "Android library versions used": "<x.xx.xxx>",
+  "androidxLibVersion":"1.6.0",
+  "playServicesBaseVersion":"18.3.0",
+  "playServicesLocationVersion":"21.0.1",
+  "firebaseCoreVersion":"19.0.2",
+  "firebaseMessagingVersion":"22.0.0",
 
   "plugins": {
     "Please note": "<true/false>, for cordova build.  True for release build, false for beta build",
@@ -12,12 +22,12 @@
 
     "Required Mobile-Push plugins": "<true/false>, enable or disable plugin",
     "cordova-acoustic-mobile-push-beta": true,
-    "cordova-acoustic-mobile-push-plugin-ios-notification-service-beta": true,
+    "cordova-acoustic-mobile-push-plugin-ios-notification-service-beta": false,
     "cordova-acoustic-mobile-push-plugin-inapp-beta": true,
     "cordova-acoustic-mobile-push-plugin-inbox-beta": true,
 
     "Optional Mobile-Push plugins": "<true/false>, enable or disable plugin",
-    "cordova-acoustic-mobile-push-plugin-action-menu-beta": true,
+    "cordova-acoustic-mobile-push-plugin-action-menu-beta": false,
     "cordova-acoustic-mobile-push-plugin-beacon-beta": true,
     "cordova-acoustic-mobile-push-plugin-calendar-beta": true,
     "cordova-acoustic-mobile-push-plugin-displayweb-beta": true,
@@ -27,17 +37,17 @@
     "cordova-acoustic-mobile-push-plugin-snooze-beta": true
   },
 
-  "customAction": "",
+  "customAction": "openInboxMessage sendEmail",
   "mceCanSyncOverride": true,
 
   "iOS": {
     "Please note: if you are using a Swift based Application Delegate you must include the product name and class name in AppDelegateClass, for example": "SwiftSample.AppDelegate",
     "appDelegateClass": "AppDelegate",
     "Please note": "you will need to update your baseUrl to the one supplied to you",
-    "baseUrl": "https://mobile-sdk-lib-XX-Y.brilliantcollector.com",
+    "baseUrl": "https://mobile-sdk-lib-us-0.brilliantcollector.com",
     "appKey": {
-      "dev": "INSERT YOUR DEV APPKEY HERE",
-      "prod": "INSERT YOUR PROD APPKEY HERE"
+      "dev": "apB9YG5Umw",
+      "prod": "apB9YG5Umw"
     },
     "Please note, this option can be used to assign a device a different UserId on reinstallation, the default is to use the same UserId on reinstallation if possible (false). If you want a different UserId on reinstallation set invalidateExistingUser to": true,
     "invalidateExistingUser": false,
@@ -67,12 +77,12 @@
               "syncRadius": 100000,
               
               "Specify how long to wait before syncing again on significant location change in seconds, default 5 minutes": "",
-              "syncInterval": 600
+              "syncInterval": 300
           },
           
           "Please note, the existince of the ibeacon key will enable iBeacon support, if iBeacon support is not desired, remove the key": "",
           "ibeacon": {
-              "UUID": "INSERT-IBEACON-UUID-HERE"
+              "UUID": "21A9A7F4-0DD8-46B7-9D4D-379F3C4AF77D"
           }
       },
     "When the autoInitialize value is set to true it will start user registration immediately, if you want to trigger user registration later at a specific point in your app, set this value to": false,
@@ -86,7 +96,7 @@
       "warn",
       "verbose"
     ],
-    "loglevel": "error",
+    "loglevel": "verbose",
     "Set logfile to true to write logs to the iTunes sync directory for debugging": "",
     "logfile": true,
     "Maximum size of log before it's rotated": "default is 10MB",
@@ -111,9 +121,9 @@
   },
   "android": {
     "Please note": "you will need to update your baseUrl to the one supplied to you",
-    "baseUrl": "https://mobile-sdk-lib-XX-Y.brilliantcollector.com",
+    "baseUrl": "https://mobile-sdk-lib-us-0.brilliantcollector.com",
     "appKey": {
-      "prod": "INSERT APP KEY HERE"
+      "prod": "gcnslVYNku"
     },
     "Set this to the google project number if you are using GCM or to an empty string if you are using FCM": "",
     "Use 'gcm' for GCM or 'fcm' for FCM": "",
@@ -140,7 +150,7 @@
       "debug",
       "verbose"
     ],
-    "loglevel": "error",
+    "loglevel": "verbose",
     "Please note, the log iteration files will be stored under": "<application cache folder on sdcard>/mce-cordova-sdk/logs/<installation time folder, format: yyyy-MM-dd-HH-mm-ss>",
     "logfile": false,
     "The number of log iteration files": "After reaching this number, the log files will be overwritten in order",
@@ -162,7 +172,7 @@
       "The sync key is only used to customize the iBeacon and Geofence syncing service, it is not required for those features": "",
       "sync": {
         "Specify how long to wait before syncing again on significant location change in seconds, default 5 minutes":"",
-        "syncInterval": 600,
+        "syncInterval": 300,
         "Location Sync radius is in meters, default 100km":"",
         "syncRadius": 100000,
         "Specify how long to wait before retrieving a new location from the device, default 5 minutes":"",
@@ -177,7 +187,7 @@
       "Please note, unlike iOS, the existence of the ibeacon key does not enable iBeacon support, iBeacon support is enabled only if iBeacons are nearby":"",
       "ibeacon": {
         "Please note: if this is not set, iBeacon events will not be sent": "This value should never be empty. Leave the default value if you don't want to use iBeacons",
-        "uuid": "YOUR-IBEACONS-UUID",
+        "uuid": "21A9A7F4-0DD8-46B7-9D4D-379F3C4AF77Dn",
         "Specify how much time the sdk will scan for iBeacons in every scan session while the application is in the foreground, default is 5 seconds": "",
         "beaconForegroundScanDuration": 5,
         "Specify how much time the sdk will wait between iBeacons scan sessions while the application is in the foreground, default is 30 seconds": "",
