--- a/plugins/cordova-acoustic-mobile-push-plugin-location/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-plugin-location/plugin.xml
@@ -8,7 +8,7 @@ industrial property rights of Acoustic, L.P. except as may be provided in an agr
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-location"
-version="3.9.95">
+version="3.9.96">
     <name>Acoustic MCE Location Cordova Plugin</name>
     <author>Acoustic MCE</author>
     <description>Allows Cordova applications to integrate with Acoustic MCE Push Services</description>
@@ -22,7 +22,7 @@ version="3.9.95">
     </js-module>
 
     <!-- Library settings -->
-    <preference name="POD_VERSION" default="3.9.95" />
+    <preference name="POD_VERSION" default="3.9.96" />
     
     <preference name="SYNC_RADIUS" default="100000" />
     <preference name="SYNC_INTERVAL" default="600" />
@@ -72,9 +72,9 @@ version="3.9.95">
         <source-file src="src/android/src/co/acoustic/mobile/push/plugin/cordova/location" target-dir="java/co/acoustic/mobile/push/plugin/cordova" />
         <source-file src="src/android/src/co/acoustic/mobile/push/sdk/js/location" target-dir="java/co/acoustic/mobile/push/sdk/js" />
         
-        <edit-config file="AndroidManifest.xml" target="/manifest/application/activity" mode="overwrite">
+        <!-- <edit-config file="AndroidManifest.xml" target="/manifest/application/activity" mode="overwrite">
             <activity android:exported="true" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale" android:label="@string/activity_name" android:launchMode="singleTop" android:name="co.acoustic.mobile.push.plugin.cordova.location.MceJsonActivity" android:theme="@style/Theme.AppCompat.NoActionBar" android:windowSoftInputMode="adjustResize" />
-        </edit-config>
+        </edit-config> -->
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <!-- MCE properties -->
