--- a/applications/samples/Sample/CampaignConfig.json
+++ b/applications/samples/Sample/CampaignConfig.json
@@ -27,14 +27,14 @@
     "cordova-acoustic-mobile-push-plugin-inbox-beta": true,
 
     "Optional Mobile-Push plugins": "<true/false>, enable or disable plugin",
-    "cordova-acoustic-mobile-push-plugin-action-menu-beta": false,
-    "cordova-acoustic-mobile-push-plugin-beacon-beta": false,
-    "cordova-acoustic-mobile-push-plugin-calendar-beta": false,
-    "cordova-acoustic-mobile-push-plugin-displayweb-beta": false,
-    "cordova-acoustic-mobile-push-plugin-geofence-beta": false,
-    "cordova-acoustic-mobile-push-plugin-location-beta": false,
-    "cordova-acoustic-mobile-push-plugin-passbook-beta": false,
-    "cordova-acoustic-mobile-push-plugin-snooze-beta": false
+    "cordova-acoustic-mobile-push-plugin-action-menu-beta": true,
+    "cordova-acoustic-mobile-push-plugin-beacon-beta": true,
+    "cordova-acoustic-mobile-push-plugin-calendar-beta": true,
+    "cordova-acoustic-mobile-push-plugin-displayweb-beta": true,
+    "cordova-acoustic-mobile-push-plugin-geofence-beta": true,
+    "cordova-acoustic-mobile-push-plugin-location-beta": true,
+    "cordova-acoustic-mobile-push-plugin-passbook-beta": true,
+    "cordova-acoustic-mobile-push-plugin-snooze-beta": true
   },
 
   "customAction": "",
