Beta AcousticMobilePush build: 3.9.124
Beta AcousticMobilePush Change Notes:
Bug Fixes

- None

Improvements

- Fixed security updates from SonarQube.

Our environment for this release:

- Android Studio Jellyfish | 2023.3.1 Patch 1
- Xcode version: 15.4
- MacOS 14.6.1
- iOS 17.x
- Android target API level 24 to 34
- Cordova version: 12.0.0
- Cordova Android plugin version: 13.0.0
- Cordova iOS plugin version: 7.1.0
- Gradle version: 7.6
- Node 16.x

Known Issues

- If using an emulator for testing on Android
    - We noticed that there are issues with emulators using api 24 which are missing play services.
      The lowest level api working emulator was api 25 with Android 7.1.1 arm64-v8a image.
    - There are issues with older emulators that do not have correct codecs to replay videos. There
      are no issues with latest versions.
- The sample application is not updating UI for Beacon tests for iOS or Android.
- If using a gps spoofer for testing beacons for Android, you might have issues on dwell or exit.
- For iOS notification service, you will need to follow https://developer.goacoustic.com/acoustic-campaign/docs/add-the-ios-notification-service-framework-to-your-cordova-project

--- a/plugins/cordova-acoustic-mobile-push/src/android/build-extras.gradle
+++ b/plugins/cordova-acoustic-mobile-push/src/android/build-extras.gradle
@@ -19,6 +19,8 @@ dependencies {
   implementation "com.google.android.gms:play-services-base:" + project.ext.playServicesBaseVersion
   implementation "com.google.firebase:firebase-messaging:" + project.ext.firebaseMessagingVersion
   implementation "com.google.firebase:firebase-core:" + project.ext.firebaseCoreVersion
+  // Used for security
+  implementation "androidx.security:security-crypto:" + project.ext.securityCryptoVersion
 }
 
 android {
